# libftxr

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libftxr-wiki.ini  libftxr.ini  libftxr.pc.in  libftxr.spec.in
.github/workflows/: build_ossfuzz.yml
.travis/: runtests.sh  script.sh
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libftxr.h.in
include/libftxr/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libftxr/: Makefile.am  ftxr_record.h  libftxr.c  libftxr.rc.in  libftxr_debug.c  libftxr_debug.h  libftxr_definitions.h.in  libftxr_error.c  libftxr_error.h  libftxr_extern.h  libftxr_libcerror.h  libftxr_libcstring.h  libftxr_libfdatetime.h  libftxr_libfguid.h  libftxr_libfole.h  libftxr_libfusn.h  libftxr_libuna.h  libftxr_record.c  libftxr_record.h  libftxr_support.c  libftxr_support.h  libftxr_types.h  libftxr_unused.h
m4/: libfusn.m4
manuals/: Makefile.am  libftxr.3
msvscpp/: Makefile.am  libftxr.sln
msvscpp/ftxr_test_error/: ftxr_test_error.vcproj
msvscpp/ftxr_test_get_version/: ftxr_test_get_version.vcproj
msvscpp/ftxr_test_record/: ftxr_test_record.vcproj
msvscpp/ftxr_test_support/: ftxr_test_support.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libfdatetime/: libfdatetime.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libftxr/: libftxr.vcproj
msvscpp/libfusn/: libfusn.vcproj
msvscpp/libuna/: libuna.vcproj
ossfuzz/: Makefile.am  ossfuzz_libftxr.h  record_fuzzer.cc
tests/: Makefile.am  ftxr_test_error.c  ftxr_test_get_version.c  ftxr_test_libcerror.h  ftxr_test_libcstring.h  ftxr_test_libftxr.h  ftxr_test_macros.h  ftxr_test_memory.c  ftxr_test_memory.h  ftxr_test_record.c  ftxr_test_support.c  ftxr_test_unused.h  pkgbuild.sh  runtests.sh  test_library.ps1  test_library.sh
