include_HEADERS = \
	libftxr.h

pkginclude_HEADERS = \
	libftxr/codepage.h \
	libftxr/definitions.h \
	libftxr/error.h \
	libftxr/extern.h \
	libftxr/features.h \
	libftxr/types.h

EXTRA_DIST = \
	libftxr.h.in \
	libftxr/definitions.h.in \
	libftxr/features.h.in \
	libftxr/types.h.in

DISTCLEANFILES = \
	libftxr.h \
	libftxr/definitions.h \
	libftxr/features.h \
	libftxr/types.h \
	Makefile \
	Makefile.in

