MSVSCPP_FILES = \
	ftxr_test_error/ftxr_test_error.vcproj \
	ftxr_test_get_version/ftxr_test_get_version.vcproj \
	ftxr_test_record/ftxr_test_record.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libftxr/libftxr.vcproj \
	libfusn/libfusn.vcproj \
	libuna/libuna.vcproj \
	libftxr.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

