MSVSCPP_FILES = \
	ftxr_test_error/ftxr_test_error.vcproj \
	ftxr_test_record/ftxr_test_record.vcproj \
	ftxr_test_support/ftxr_test_support.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libftxr/libftxr.vcproj \
	libfusn/libfusn.vcproj \
	libuna/libuna.vcproj \
	libftxr.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

